fix: Ajustando caminho dos recursos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SuperDev</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <img class="grama-background" src="/images/grama.png" alt="Grama" />
+    <img class="grama-background" src="./images/grama.png" alt="Grama" />
     <div class="container" id="telaInicial">
       <h1>SuperDev</h1>
       <button class="jogar-btn" id="btn-jogar">JOGAR</button>
@@ -20,7 +20,7 @@
         </h2>
       </div>
       <div class="desenho-ia">
-        <img src="/images/desenho_ia.png" class="desenho-ia-img" alt="Quem será?" />
+        <img src="./images/desenho_ia.png" class="desenho-ia-img" alt="Quem será?" />
       </div>
       <div class="conteudo-fase">
         <h4>Mas antes, vamos resolver um desafio, para prosseguir...</h4>
@@ -38,7 +38,7 @@
     <div class="container" id="segunda-fase">
         <h4>Essa pessoa é bem louquinha...</h4>
         <div>
-            <img src="/images/foto1.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
+            <img src="./images/foto1.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
         </div>
         <h5>Mas vamos continuar... Essa pessoa deveria ser da área de?</h5>
         <div class="botoes-wrapper">
@@ -53,7 +53,7 @@
     <div class="container" id="terceira-fase">
         <h4>Mas além de louquinha, essa pessoa é bem teimosa...</h4>
         <div>
-            <img src="/images/foto3.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
+            <img src="./images/foto3.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
         </div>
         <h5>Ela tem razão ou não?</h5>
         <div class="botoes-wrapper">
@@ -68,7 +68,7 @@
     <div class="container" id="quarta-fase">
         <h4>Mas seu jeito de ser é inspirador para todos...</h4>
         <div>
-            <img src="/images/foto2.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
+            <img src="./images/foto2.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
         </div>
         <h5>Devemos ir para a próxima fase?</h5>
         <div class="botoes-wrapper">
@@ -83,10 +83,10 @@
     <div class="container" id="quinta-fase">
         <h4>Essa pessoa não é qualquer pessoa... É KEULIANE!!!</h4>
         <div>
-            <img src="/images/foto4.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
+            <img src="./images/foto4.jpg" alt="Quem é ela?" class="desenho-ia-img foto-moldura" />
         </div>
         <h5>E só quero agradecer ao SENHOR por sua vida, moça!!! Você é uma benção de Deus para todos ao seu redor. Uma menina especial, que serve de inspiração para outras moças e jovens no geral, que se engaja na obra de Deus. Que você continue sendo sempre assim!!! Que o Senhor realize cada desejo do seu coração, segundo a vontade Dele, que é boa, perfeita e agradável! Creio que todos, não só eu, ama ter você em nossas vidas!!! Parabéns para a matemática mais arrochada desse sertão!!!!!!!</h5>
     </div>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
